Se Ajustaron las ubicaciones del Controlador del controlador de la   Pantalla Principal